fix height for image on mobile

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -45,7 +45,7 @@
         
         @media screen and (max-width: 480px) {
             width: 200px;
-            height: 430px;
+            height: 330px;
             margin: 0;
         }
     } 
